implement all API endpoints and create angular web app

--- a/db-app/src/app/donors/donor-list/donor-list.component.html
+++ b/db-app/src/app/donors/donor-list/donor-list.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="col-md-5 col-md-offset-2">
       <donor-details
-        [contact]="selectedDonor"
+        [donor]="selectedDonor"
         [createHandler]="addDonor"
         [updateHandler]="updateDonor"
         [deleteHandler]="deleteDonor">
