--- a/db-app/src/app/donors/donor-details/donor-details.component.html
+++ b/db-app/src/app/donors/donor-details/donor-details.component.html
@@ -7,21 +7,9 @@
   <div *ngIf="donor" class="row">
     <form class="col-md-12">
       <div class="form-group">
-        <label for="donor-first_name">Name</label>
-        <input class="form-control" name="donor-first_name" [(ngModel)]="donor.first_name" placeholder="First Name"/>
+        <label for="donor-firstName">Name</label>
+        <input class="form-control" name="donor-firstName" [(ngModel)]="donor.firstName" placeholder="First Name"/>
       </div>
-      <!--<div class="form-group">
-        <label for="contact-email">Email</label>
-        <input class="form-control" name="contact-email" [(ngModel)]="contact.email" placeholder="support@mlab.com"/>
-      </div>
-      <div class="form-group">
-        <label for="contact-phone-mobile">Mobile</label>
-        <input class="form-control" name="contact-phone-mobile" [(ngModel)]="contact.phone.mobile" placeholder="1234567890"/>
-      </div>
-      <div class="form-group">
-        <label for="contact-phone-work">Work</label>
-        <input class="form-control" name="contact-phone-work" [(ngModel)]="contact.phone.work" placeholder="0123456789"/>
-      </div>-->
       <button class="btn btn-primary" *ngIf="!donor._id" (click)="createDonor(donor)">Create</button>
       <button class="btn btn-info" *ngIf="donor._id" (click)="updateDonor(donor)">Update</button>
       <button class="btn btn-danger" *ngIf="donor._id" (click)="deleteDonor(donor._id)">Delete</button>
