implement all API endpoints and create angular web app

--- a/db-app/src/app/donors/donor-list/donor-list.component.html
+++ b/db-app/src/app/donors/donor-list/donor-list.component.html
@@ -6,7 +6,7 @@
           *ngFor="let donor of donors"
           (click)="selectDonor(donor)"
           [class.active]="donor === selectedDonor">
-          {{donor.name}}
+          {{donor.firstName}}
         </li>
       </ul>
       <button class="btn btn-warning" (click)="createNewDonor()">New</button>
