implement all API endpoints and create angular web app

--- a/db-app/src/app/donors/donor-list/donor-list.component.html
+++ b/db-app/src/app/donors/donor-list/donor-list.component.html
@@ -11,13 +11,13 @@
       </ul>
       <button class="btn btn-warning" (click)="createNewDonor()">New</button>
     </div>
-    <div class="col-md-5 col-md-offset-2">
-      <donor-details
+    <!--<div class="col-md-5 col-md-offset-2">
+     <donor-details
         [donor]="selectedDonor"
         [createHandler]="addDonor"
         [updateHandler]="updateDonor"
         [deleteHandler]="deleteDonor">
       </donor-details>
-    </div>
+    </div>-->
   </div>
   
