--- a/db-app/src/app/donors/donor-table/donor-table.component.html
+++ b/db-app/src/app/donors/donor-table/donor-table.component.html
@@ -2,7 +2,7 @@
 <a mat-raised-button (click)="onDelete(selection.selected)">Delete</a>
 <div class="mat-elevation-z8">
   <table mat-table class="full-width-table" matSort aria-label="Elements">
-
+<!--
     <ng-container matColumnDef="select">
       <th mat-header-cell *matHeaderCellDef>
         <mat-checkbox (change)="$event ? masterToggle() : null"
@@ -18,7 +18,7 @@
                         [aria-label]="checkboxLabel(row)">
         </mat-checkbox>
       </td>
-    </ng-container>
+    </ng-container>-->
 
     <!-- Name Column -->
     <ng-container matColumnDef="first_name">
