--- a/db-app/src/app/donors/donor-table/donor-table.component.html
+++ b/db-app/src/app/donors/donor-table/donor-table.component.html
@@ -21,7 +21,7 @@
     </ng-container>-->
 
     <!-- Name Column -->
-    <ng-container matColumnDef="first_name">
+    <ng-container matColumnDef="firstName">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name</th>
       <td mat-cell *matCellDef="let row">{{row.firstName}}</td>
     </ng-container>
