--- a/db-app/src/app/donors/donor-table/donor-table.component.html
+++ b/db-app/src/app/donors/donor-table/donor-table.component.html
@@ -1,8 +1,8 @@
 <a mat-raised-button>Add New Donor</a>
 <a mat-raised-button (click)="onDelete(selection.selected)">Delete</a>
-<div class="mat-elevation-z8">
+<div class="mat-elevation-z8 donor-table">
   <table mat-table class="full-width-table" matSort aria-label="Elements">
-<!--
+
     <ng-container matColumnDef="select">
       <th mat-header-cell *matHeaderCellDef>
         <mat-checkbox (change)="$event ? masterToggle() : null"
@@ -18,12 +18,27 @@
                         [aria-label]="checkboxLabel(row)">
         </mat-checkbox>
       </td>
-    </ng-container>-->
+    </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="firstName">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name</th>
       <td mat-cell *matCellDef="let row">{{row.firstName}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="lastName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Last Name</th>
+      <td mat-cell *matCellDef="let row">{{row.lastName}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="dob">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Date of Birth</th>
+      <td mat-cell *matCellDef="let row">{{row.birthDate | date}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Edit</th>
+      <td mat-cell *matCellDef="let row"><button mat-raided-button>Edit</button></td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
