--- a/db-app/src/app/donors/donor-table/donor-table.component.html
+++ b/db-app/src/app/donors/donor-table/donor-table.component.html
@@ -1,4 +1,4 @@
-<a mat-raised-button>Add New Donor</a>
+<a mat-raised-button routerLink="/donor-registration">Add New Donor</a>
 <a mat-raised-button (click)="onDelete(selection.selected)">Delete</a>
 <div class="mat-elevation-z8 donor-table">
   <table mat-table class="full-width-table" matSort aria-label="Elements">
