--- a/db-app/src/app/header/header.component.html
+++ b/db-app/src/app/header/header.component.html
@@ -1,3 +1,5 @@
+<div id="wrap">
+<div id="content-wrape">
 <mat-toolbar color="primary" class="navbar">
     <div class="title">Forensic Anthropology Center</div>
     <div>
@@ -16,3 +18,5 @@
         <a mat-raised-button [matMenuTriggerFor]="dmMenu">Donor Metrics</a>
     </div>
 </mat-toolbar>
+</div>
+</div>
