--- a/db-app/src/app/donors/donor-table/donor-table.component.html
+++ b/db-app/src/app/donors/donor-table/donor-table.component.html
@@ -38,7 +38,7 @@
 
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Edit</th>
-      <td mat-cell *matCellDef="let row"><button mat-raised-button [routerLink]="['/edit', row._id]">Edit</button></td>
+      <td mat-cell *matCellDef="let row"><button mat-raised-button [routerLink]="['/edit', row.id]">Edit</button></td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
