#5 Added Settings and Logout buttons, no functionality

--- a/db-app/src/app/header/header.component.html
+++ b/db-app/src/app/header/header.component.html
@@ -16,6 +16,8 @@
             <button mat-menu-item>Fully</button>
         </mat-menu>
         <a mat-raised-button [matMenuTriggerFor]="dmMenu">Donor Metrics</a>
+        <a mat-raised-button routerLink="/">Settings</a>
+        <a mat-raised-button routerLink="/">Logout</a>
     </div>
 </mat-toolbar>
 </div>
