#7 Fixed the heading issue for login and register pages

--- a/db-app/src/app/user/login/login.component.html
+++ b/db-app/src/app/user/login/login.component.html
@@ -1,24 +1,9 @@
-<style>
-    .input-container {
-        display:flex;
-        flex-direction: column;
-        width: 30%;
-        margin: 0 auto;
-    }
 
-    .header {
-        text-align: center;
-    }
-
-    .buttonStyle {
-        display: flex;
-        flex-direction: column;
-        width: 15%;
-        margin: 0 auto;
-    }
-</style>
-<!--<div *ngIf="error" class="alert alert-danger">{{error}}</div>
-<div *ngIf="success" class="alert alert-success">{{success}}</div>-->
+<!--Heading-->
+<mat-toolbar color="primary" class="navbar">
+    <div class="title">Forensic Anthropology Center</div>
+</mat-toolbar>
+<br>
 <h2 class="header">Login</h2>
 
 <!--Login Form-->
