--- a/db-app/src/app/user/register/register.component.html
+++ b/db-app/src/app/user/register/register.component.html
@@ -1,22 +1,8 @@
-<style>
-    .input-container {
-        display:flex;
-        flex-direction: column;
-        width: 30%;
-        margin: 0 auto;
-    }
-    .header {
-        text-align: center;
-    }
-    .buttonStyle {
-        display: flex;
-        flex-direction: column;
-        width: 15%;
-        margin: 0 auto;
-        text-align: center;
-    }
-</style>
-<!--<div *ngIf="error" class="alert alert-danger">{{error}}</div>-->
+<!--Heading-->
+<mat-toolbar color="primary" class="navbar">
+    <div class="title">Forensic Anthropology Center</div>
+</mat-toolbar>
+<br>
 <h2 class="header">Register</h2>
 
 <!--Registeration Form-->
