--- a/db-app/src/app/header/header.component.html
+++ b/db-app/src/app/header/header.component.html
@@ -17,7 +17,7 @@
         </mat-menu>
         <a mat-raised-button [matMenuTriggerFor]="dmMenu">Donor Metrics</a>
         <a mat-raised-button routerLink="/">Settings</a>
-        <a mat-raised-button routerLink="/">Logout</a>
+        <a mat-raised-button (click)="auth.logout()">Logout</a>
     </div>
 </mat-toolbar>
 </div>
