#6 Connected and added routes to header

--- a/db-app/src/app/header/header.component.html
+++ b/db-app/src/app/header/header.component.html
@@ -16,7 +16,7 @@
             <button mat-menu-item>Fully</button>
         </mat-menu>
         <a mat-raised-button [matMenuTriggerFor]="dmMenu">Donor Metrics</a>
-        <a mat-raised-button routerLink="/">Settings</a>
+        <a mat-raised-button routerLink="/setting">Settings</a>
         <a mat-raised-button (click)="auth.logout()">Logout</a>
     </div>
 </mat-toolbar>
