--- a/db-app/src/app/settings/settings.component.html
+++ b/db-app/src/app/settings/settings.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
+<table mat-table [dataSource]="users" multiTemplateDataRows class="mat-elevation-z8">
 
   <!-- Headers -->
   <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
@@ -10,14 +10,22 @@
   <ng-container matColumnDef="expandedDetail">
     <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
       <div class="details" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-        
-        <!-- Description -->
-        <!-- this will be the section that'll hold the user's privs, del option, and password change option -->
-        <div class="element-description">
-          <!--{{element.description}}-->
-          <mat-checkbox class="privelge-checkbox">Create</mat-checkbox>
-          <mat-checkbox class="privelge-checkbox">Edit</mat-checkbox>
-          <mat-checkbox class="privelge-checkbox">Delete</mat-checkbox>
+
+        <!-- Privelges-->
+        <div class="element-privs">
+          <mat-checkbox class="privelge-checkbox" [checked]="element.createPriv">Create</mat-checkbox>
+          <mat-checkbox class="privelge-checkbox" [checked]="element.editPriv">Edit</mat-checkbox>
+          <mat-checkbox class="privelge-checkbox" [checked]="element.deletePriv">Delete</mat-checkbox>
+        </div>
+
+        <!-- Spacer between buttons and privelges-->
+        <div class="spacer"></div>
+
+        <!-- Save, Delete, Change Password Buttons -->
+        <div class="element-button-container">
+          <button mat-raised-button class="element-buttons">Change Password</button>
+          <button mat-raised-button class="element-buttons">Save</button>
+          <button mat-raised-button class="element-buttons">Delete</button>
         </div>
 
       </div>
@@ -25,11 +33,10 @@
   </ng-container>
 
   <!-- When not expanded -->
-  <!-- this will just list the basic data of the user-->
   <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
 
   <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="element-row"
-    [class.example-expanded-row]="expandedElement === element"
+    [class.expanded-row]="expandedElement === element"
     (click)="expandedElement = expandedElement === element ? null : element">
   </tr>
 
