--- a/db-app/src/app/settings/settings.component.css
+++ b/db-app/src/app/settings/settings.component.css
@@ -26,8 +26,13 @@ tr.element-row:not(.expanded-row):active {
   /*border: 2px solid red;*/
 }
 
-.spacer {
+.textFields {
   width: 40%;
+}
+
+.textInputs {
+  margin: 10px;
+  padding: 0;
 }
 
 .element-privs {
