--- a/db-app/src/app/donors/donor-table/donor-table.component.css
+++ b/db-app/src/app/donors/donor-table/donor-table.component.css
@@ -2,17 +2,18 @@
   width: 100%;
 }
 
-.donor-table {
+.container {
   width: 80%;
-  margin: 20px auto;
+  position: fixed;
+  margin: 10%;
+  margin-top: 1%;
 }
-
+.mat-form-field{
+  font-size: 14px;
+  width: 30rem;
+  margin-left: 1rem;
+}
 a {
   margin-top: 1rem;
   margin-left: 1rem;
-}
-
-.mat-form-field {
-  font-size: 14px;
-  width: 100%;
 }
