Huge commit with working searching, and several generated tables

--- a/db-app/src/app/header/header.component.html
+++ b/db-app/src/app/header/header.component.html
@@ -4,7 +4,7 @@
     <div class="title">Forensic Anthropology Center</div>
     <div>
         <a mat-raised-button routerLink="/donor-table">Donor Registration</a>
-        <a mat-raised-button>Donor Control</a>
+        <a mat-raised-button routerLink="/donor-c-table">Donor Control</a>
         <mat-menu #invMenu="matMenu">
             <button mat-menu-item>Cremation</button>
             <button mat-menu-item>Sub Adult</button>
