--- a/db-app/src/app/settings_page/user-data-form/user-data-form.component.html
+++ b/db-app/src/app/settings_page/user-data-form/user-data-form.component.html
@@ -142,17 +142,17 @@
     <!-- Changing Password-->
     <button mat-raised-button class="element-buttons" [disabled]="popChange" (click)="openChange()">Change
       Password</button>
-    <app-pop-up class="my-prompt" [isOpen]="popChange">
-      <div class="box">
-        <header>
-          <span class="title">Change Password</span>
+    <app-pop-up [isOpen]="popChange">
+      <div class="pop-up-box">
+        <header class="pop-up-header">
+          <span class="pop-up-title">Change Password</span>
         </header>
         <main>
           Are you sure you want to delete this record?
         </main>
-        <footer>
-          <button (click)="onChangePassword('')">&lt;&nbsp;Delete&nbsp;&gt;</button>
-          <button (click)="cancelChange()">&lt;&nbsp;Cancel&nbsp;&gt;</button>
+        <footer class="pop-up-footer">
+          <button mat-raised-button class="element-buttons" (click)="onChangePassword('')">Delete</button>
+          <button mat-raised-button class="element-buttons" (click)="cancelChange()">Cancel</button>
         </footer>
       </div>
     </app-pop-up>
@@ -161,15 +161,15 @@
     <button mat-raised-button class="element-buttons" (click)="onSave()" [disabled]="!form.valid">Save</button>
 
     <!-- Deleting User-->
-    <button mat-raised-button class="element-buttons" [disabled]="popChange" (click)="openDelete()">Delete</button>
-    <app-pop-up class="my-prompt" [isOpen]="popDelete">
-      <div class="box">
-        <header>
-          <span class="title">Delete User</span>
+    <button mat-raised-button class="element-buttons" [disabled]="popDelete" (click)="openDelete()">Delete</button>
+    <app-pop-up [isOpen]="popDelete">
+      <div class="pop-up-box">
+        <header class="pop-up-header">
+          <span class="pop-up-title">Delete User</span>
         </header>
-        <footer>
-          <button (click)="onDelete()">&lt;&nbsp;Delete&nbsp;&gt;</button>
-          <button (click)="cancelDelete()">&lt;&nbsp;Cancel&nbsp;&gt;</button>
+        <footer class="pop-up-footer">
+          <button mat-raised-button class="element-buttons" (click)="onDelete()">Delete</button>
+          <button mat-raised-button class="element-buttons" (click)="cancelDelete()">Cancel</button>
         </footer>
       </div>
     </app-pop-up>
