--- a/db-app/src/app/settings_page/pop-up/pop-up.component.css
+++ b/db-app/src/app/settings_page/pop-up/pop-up.component.css
@@ -5,7 +5,7 @@
     left: 0;
     right: 0;
     top: 0;
-    background: transparent;
+    background: black;
   }
   
   .pop-up {
@@ -28,8 +28,9 @@
     margin: 0 auto;
     width: auto;
     padding: 1rem;
-    box-shadow: 6px 6px 0 #000000;
-    background: #180099;
-    color: #ffffff;
+    border-radius: 3%;
+    background:#ffffff;
+    color: #000000;
+    border: 4px solid black;
   }
   
