--- a/db-app/src/app/settings_page/user-data-form/user-data-form.component.html
+++ b/db-app/src/app/settings_page/user-data-form/user-data-form.component.html
@@ -147,18 +147,66 @@
         <header class="pop-up-header">
           <span class="pop-up-title">Change Password</span>
         </header>
-        <main>
-          Are you sure you want to delete this record?
-        </main>
+        <form [formGroup]="passwordForm">
+
+          <!--Password Field-->
+          <div class="input-container">
+            <mat-form-field>
+              <mat-label>Password</mat-label>
+              <input matInput required type="password" formControlName="password">
+
+              <!--Errors-->
+              <mat-error *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger">
+
+                <!--Error for missing field-->
+                <mat-error *ngIf="password.errors.required">
+                  Please enter a password
+                </mat-error>
+
+                <!--Error for pattern break-->
+                <mat-error *ngIf="password.errors.pattern">
+                  8 charcters, 1 upper, 1 lower, 1 number, 1 special
+                </mat-error>
+
+              </mat-error>
+            </mat-form-field>
+          </div>
+
+          <!--Confirm password-->
+          <div class="input-container">
+            <mat-form-field>
+              <mat-label>Confirm Password</mat-label>
+              <input matInput required type="password" formControlName="passwordConfirmation">
+
+              <!--Errors-->
+              <mat-error
+                *ngIf="passwordConfirmation.errors && (passwordConfirmation.dirty || passwordConfirmation.touched)"
+                class="alert alert-danger">
+
+                <!--Error for missing field-->
+                <mat-error *ngIf="passwordConfirmation.errors.required">
+                  Please enter password again
+                </mat-error>
+
+                <!--Error for password confirmation-->
+                <mat-error *ngIf="passwordConfirmation.errors.passwordConf">
+                  Password does not match the one above
+                </mat-error>
+
+              </mat-error>
+            </mat-form-field>
+          </div>
+        </form>
+
         <footer class="pop-up-footer">
-          <button mat-raised-button class="element-buttons" (click)="onChangePassword('')">Delete</button>
+          <button mat-raised-button class="element-buttons" [disabled]="!formPassword.valid" (click)="onChangePassword()">Save</button>
           <button mat-raised-button class="element-buttons" (click)="cancelChange()">Cancel</button>
         </footer>
       </div>
     </app-pop-up>
 
     <!-- Saving User-->
-    <button mat-raised-button class="element-buttons" (click)="onSave()" [disabled]="!form.valid">Save</button>
+    <button mat-raised-button class="element-buttons" (click)="onSave()" [disabled]="!formUser.valid">Save</button>
 
     <!-- Deleting User-->
     <button mat-raised-button class="element-buttons" [disabled]="popDelete" (click)="openDelete()">Delete</button>
