--- a/db-app/src/app/settings_page/settings/settings.component.html
+++ b/db-app/src/app/settings_page/settings/settings.component.html
@@ -12,9 +12,9 @@
   <ng-container matColumnDef="expandedDetail">
     <td mat-cell *matCellDef="let element" [attr.colspan]="validUsersColumns .length">
       <div class="details" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-        
+
         <!-- User data form compontent, per user-->
-        <app-user-data-form [user] = "element" ></app-user-data-form>
+        <app-user-data-form [user]="element"></app-user-data-form>
       </div>
     </td>
   </ng-container>
@@ -33,3 +33,47 @@
 
 <!-- Pending users table-->
 <h2 class="table-header">Needs Validation</h2>
+<table mat-table [dataSource]="pUsers" class="mat-elevation-z8">
+
+  <!-- Checkbox Column -->
+  <ng-container matColumnDef="select">
+    <th mat-header-cell *matHeaderCellDef>
+      <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
+        [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+      </mat-checkbox>
+    </th>
+    <td mat-cell *matCellDef="let row">
+      <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+        [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
+      </mat-checkbox>
+    </td>
+  </ng-container>
+
+  <!-- firstName Column -->
+  <ng-container matColumnDef="firstName">
+    <th mat-header-cell *matHeaderCellDef> firstName </th>
+    <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+  </ng-container>
+
+  <!-- lastName Column -->
+  <ng-container matColumnDef="lastName">
+    <th mat-header-cell *matHeaderCellDef> lastName </th>
+    <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+  </ng-container>
+
+  <!-- userName Column -->
+  <ng-container matColumnDef="userName">
+    <th mat-header-cell *matHeaderCellDef> userName </th>
+    <td mat-cell *matCellDef="let element"> {{element.userName}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="pendingUsersColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: pendingUsersColumns;" (click)="selection.toggle(row)">
+  </tr>
+</table>
+
+<!-- Validation table buttons-->
+<div class="validationButtonsContainer">
+  <button mat-raised-button class="validationButtons" (click)="validatePendingUsers()">Validate</button>
+  <button mat-raised-button class="validationButtons" (click)="deletePendingUsers()">Delete</button>
+</div>
