--- a/db-app/src/app/settings_page/user-data-form/user-data-form.component.html
+++ b/db-app/src/app/settings_page/user-data-form/user-data-form.component.html
@@ -13,7 +13,7 @@
 
     <!-- Donor Registeration-->
     <tr>
-      <td>Donor Registeration</td>
+      <td>Donor Registration</td>
       <td>
         <mat-checkbox class="privelge-checkbox" formControlName="donorRegCreatePriv"></mat-checkbox>
       </td>
