--- a/db-app/src/app/donors/donor-table/donor-table.component.css
+++ b/db-app/src/app/donors/donor-table/donor-table.component.css
@@ -10,20 +10,71 @@
 }
 .filtering{
   font-size: 14px;
-  margin-left: 1rem;
 }
-.mat-form-field {
+.searchBar {
   width: 30rem;
 }
 a {
   margin-top: 1rem;
-  margin-left: 1rem;
-}
-.menu-select {
-  width: 3rem;
-  margin-left: 1rem;
   margin-right: 1rem;
 }
 .mat-option {
   width: 3rem;
+}
+mat-expansion-panel {
+  margin-bottom: 1rem;
+}
+.filterButton {
+  float: right;
+}
+.filterSelectionBox {
+  font-weight: normal;
+  margin-left: 1rem;
+  float: center;
+}
+.filterType {
+  margin-left: 1rem;
+}
+.mat-list-base .mat-list-item, .mat-list-base .mat-list-option {
+  display: block;
+  height: 30px;
+  -webkit-tap-highlight-color: transparent;
+  width: 100%;
+  padding: 0;
+  position: relative;
+}
+.tab-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-content: space-between;
+}
+
+.one {
+  flex: 1;
+}
+
+.two {
+  flex: 1;
+}
+.three {
+  flex: 2;
+}
+.four {
+  flex: 1;
+}
+.five {
+  flex: 1;
+}
+.buttonStyle {
+  float: right;
+}
+.deleteButton {
+  background-color: red;
+}
+.exportButton {
+  background-color: green;
+}
+.mat-radio-button {
+  margin-left: 1rem;
 }
