--- a/db-app/src/app/app.component.html
+++ b/db-app/src/app/app.component.html
@@ -1,3 +1,21 @@
-<app-header *ngIf="showHead"></app-header>
+<!--<div class="mat-app-background">
+    <router-outlet></router-outlet>
+</div>-->
 
-<router-outlet></router-outlet>
+<!--<div [ngClass]="{'dark-theme': isDarkTheme | async}">
+    <app-sidenav>
+        <app-header *ngIf="showHead"></app-header>
+        <div class="mat-app-background">
+            <router-outlet></router-outlet>
+        </div>
+    </app-sidenav>
+</div>-->
+
+<div class="app">
+    <app-sidenav>
+        <app-toolbar></app-toolbar>
+        <main>
+            <router-outlet></router-outlet>
+        </main>
+    </app-sidenav>
+</div>
