--- a/db-app/src/my-theme.scss
+++ b/db-app/src/my-theme.scss
@@ -12,7 +12,7 @@
 }
 
 //Theme Colors
-$my-theme-primary: mat-palette($mat-amber, 800);
+$my-theme-primary: mat-palette($mat-orange, 800);
 $my-theme-accent: mat-palette($mat-gray, 700);
 $my-theme-warn: mat-palette($mat-red);
 
