--- a/db-app/src/app/Components/donors/donor-table/donor-table.component.html
+++ b/db-app/src/app/Components/donors/donor-table/donor-table.component.html
@@ -18,21 +18,22 @@
         <mat-tab-group >
           <mat-tab label="Personal">
             <div class="tab-container">
+              <mat-divider vertical=true></mat-divider>
               <div class="one">
-                <mat-checkbox formControlName="hairToggle" class="filterSelectionBox">Hair Color:</mat-checkbox>
-                <div *ngIf="filterForm.value.hairToggle">
-                  <mat-selection-list formControlName="hairControl">
+                <button mat-button class="filterSelectionButton" (click)="toggleFunction('hairMenu')">Hair Color</button>
+                <div class="hairMenu" id="hairMenu" style="display: none;">
+                  <mat-selection-list formControlName="hairColor">
                     <mat-list-option *ngFor="let type of hairType" [value]="type.value">
                       {{type.view}}
                     </mat-list-option>
                   </mat-selection-list>
                 </div>
-              </div>
+              </div> 
               <mat-divider vertical=true></mat-divider>
               <div class="two">
-                <mat-checkbox class="filterSelectionBox" formControlName="sexToggle">Sex:</mat-checkbox>
-                <div *ngIf="filterForm.value.sexToggle">
-                  <mat-selection-list formControlName="sexControl">
+                <button mat-button class="filterSelectionButton" (click)="toggleFunction('sexMenu')">Sex</button>
+                <div id="sexMenu" style="display: none;">
+                  <mat-selection-list formControlName="selectedSex">
                     <mat-list-option *ngFor="let type of sexType" [value]="type.value">
                       {{type.view}}
                     </mat-list-option>
@@ -41,9 +42,9 @@
               </div>
               <mat-divider vertical=true></mat-divider>
               <div class="three">
-                <mat-checkbox class="filterSelectionBox" formControlName="raceToggle">Race:</mat-checkbox>
-                <div *ngIf="filterForm.value.raceToggle">
-                  <mat-selection-list formControlName="raceControl">
+                <button mat-button class="filterSelectionButton" (click)="toggleFunction('raceMenu')">Race</button>
+                <div id="raceMenu" style="display: none;">
+                  <mat-selection-list formControlName="selectedRace">
                     <mat-list-option *ngFor="let type of raceType" [value]="type.value">
                       {{type.view}}
                     </mat-list-option>
@@ -52,9 +53,9 @@
               </div>
               <mat-divider vertical=true></mat-divider>
               <div class="four">
-                <mat-checkbox class="filterSelectionBox" formControlName="bloodToggle">Blood Type:</mat-checkbox>
-                <div id="bloodType" *ngIf="filterForm.value.bloodToggle">
-                  <mat-selection-list formControlName="bloodControl">
+                <button mat-button class="filterSelectionButton" (click)="toggleFunction('bloodMenu')">Blood Types</button>
+                <div id="bloodMenu" style="display: none;">
+                  <mat-selection-list formControlName="bloodType">
                     <mat-list-option *ngFor="let type of bloodType" [value]="type.value">
                       {{type.view}}
                     </mat-list-option>
@@ -62,6 +63,7 @@
                 </div>
               </div>
               <mat-divider vertical=true></mat-divider>
+              <!--
               <div class="five">
                 <mat-radio-group formControlName="ageRadio">
                   <mat-radio-button value="exact">Exact Age</mat-radio-button>
@@ -85,13 +87,12 @@
                   </mat-form-field>
                 </div>
               </div>
-            </div>
-              
-              
+            -->
+            </div>        
           </mat-tab>
           <mat-tab label="Medical">
-
           </mat-tab>
+
         </mat-tab-group>
         <button class="resetButton" color="warn" mat-raised-button type="submit" (click)="onResetFilters();accordion.closeAll()">Reset Filters</button>
         <button class="filterButton" mat-raised-button type="submit" (click)="onApplyFilters();accordion.closeAll()">Apply Filters</button>
@@ -143,13 +144,6 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-
-    <div *ngIf="isLoading" class="spinner-container">
-      <mat-progress-spinner
-        color="primary" 
-        mode="indeterminate">
-      </mat-progress-spinner>
-    </div>
 
     <mat-paginator #paginator
         [length]="dataSource?.data.length"
