--- a/db-app/src/app/Components/donors/donor-table/donor-table.component.html
+++ b/db-app/src/app/Components/donors/donor-table/donor-table.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="table-actions">
-    <a class="buttonStyle deleteButton" mat-raised-button (click)="onDelete(selection.selected)">Delete</a>
+    <a class="buttonStyle deleteButton" color="warn" mat-raised-button (click)="onDelete(selection.selected)">Delete</a>
     <a class="buttonStyle exportButton" mat-raised-button (click)="onExport(selection.selected)">Export</a>
     <a class="buttonStyle addButton" mat-raised-button routerLink="/donor-registration">Add New Donor</a>
   </div>
@@ -137,8 +137,17 @@
       </ng-container>
 
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>Edit</th>
-        <td mat-cell *matCellDef="let row"><button mat-raised-button [routerLink]="['/edit', row.id]">Edit</button></td>
+        <th mat-header-cell *matHeaderCellDef>Options</th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-icon-button [matMenuTriggerFor]="optionsMenu">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+          <mat-menu #optionsMenu="matMenu">
+            <button mat-menu-item>Move to Control</button>
+            <button mat-menu-item [routerLink]="['/edit', row.id]">Edit</button>
+            <button mat-menu-item (click)="onSingleDelete(row.id)">Delete</button>
+          </mat-menu>
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
